--- a/Project/index.html
+++ b/Project/index.html
@@ -27,6 +27,9 @@
         <option value="Nukulaelae">Nukulaelae</option>
         <option value="Niulakita">Niulakita</option>
       </select>
+      <div class="slidecontainer">
+        <input type="range" min="1" max="10" value="5" step="1"class="slider" id="myRange">
+      </div>
     </div>
     <!-- Map -->
     <div id='map' class='map'></div>
