--- a/Project/index.html
+++ b/Project/index.html
@@ -28,13 +28,31 @@
         <option value="Niulakita">Niulakita</option>
       </select>
       <div class="slidecontainer">
-        <input type="range" min="1" max="10" value="5" step="1"class="slider" id="myRange">
+        <input type="range" min="0" max="10" value="5" step="1" class="slider" id="myRange">
+        <h1 type="text" id="slidervalue" style="color:white">test</h1>
+      </div>
+      <div class="impacts">
+        <h1 style="color:white; font-size:25px">Transportation</hr>
+        <label class="switch">
+          <input type="checkbox" id="transportation_switch">
+          <span class="slider toggle"></span>
+        </label>
+        <h1 style="color:white; font-size:25px">Food Security</hr>
+        <label class="switch">
+          <input type="checkbox" id="food_switch">
+          <span class="slider toggle"></span>
+        </label>
+        <h1 style="color:white; font-size:25px">Infrastructure</hr>
+        <label class="switch">
+          <input type="checkbox" id="infrastructure_switch">
+          <span class="slider toggle"></span>
+        </label>
       </div>
     </div>
     <!-- Map -->
     <div id='map' class='map'></div>
     <script src="js/jquery-2.2.0.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="js/underscore.js"></script>
   </body>
 </html>
