--- a/Project/index.html
+++ b/Project/index.html
@@ -39,7 +39,7 @@
         </label>
         <div class="slidecontainer trans"  hidden = "true">
           <label style="font-size: 15px"> Weight for Transportation </label>
-          <input type="range" min="1" max="2" value="1" step="0.5" class="slider weight" id="weight_trans">
+          <input type="range" min="1" max="3" value="1" step="1" class="slider weight" id="weight_trans">
         </div>
         <h1 style="color:white; font-size:25px">Food Security</hr>
         <label class="switch">
@@ -48,7 +48,7 @@
         </label>
         <div class="slidecontainer food" hidden = "true">
           <label style="font-size: 15px"> Weight for food security </label>
-          <input type="range" min="1" max="2" value="1" step="0.5" class="slider weight" id="weight_food">
+          <input type="range" min="1" max="3" value="1" step="1" class="slider weight" id="weight_food">
         </div>
         <h1 style="color:white; font-size:25px">Infrastructure</hr>
         <label class="switch">
@@ -57,21 +57,18 @@
         </label>
         <div class="slidecontainer buildings" hidden = "true">
           <label style="font-size: 15px"> Weight for Infrastructure </label>
-          <input type="range" min="1" max="2" value="1" step="0.5" class="slider weight" id="weight_build">
+          <input type="range" min="1" max="3" value="1" step="1" class="slider weight" id="weight_build">
         </div>
       </div>
     </div>
     <div id="impact-legend" class="legend" style="color:white" hidden="true">
       <h4>Impact Index</h4>
-      <div><span style="background-color: #023858"></span>15</div>
-      <div><span style="background-color: #045a8d"></span>13</div>
-      <div><span style="background-color: #0570b0"></span>11</div>
-      <div><span style="background-color: #3690c0"></span>9</div>
-      <div><span style="background-color: #74a9cf"></span>7</div>
-      <div><span style="background-color: #a6bddb"></span>5</div>
-      <div><span style="background-color: #d0d1e6"></span>3</div>
-      <div><span style="background-color: #ece7f2"></span>1</div>
-      <div><span style="background-color: #fff7fb"></span>0</div>
+      <div><span style="background-color: #00429d"></span>9</div>
+      <div><span style="background-color: #3c65ae"></span>7</div>
+      <div><span style="background-color: #5e8abe"></span>5</div>
+      <div><span style="background-color: #81b0cd"></span>3</div>
+      <div><span style="background-color: #abd5dc"></span>1</div>
+      <div><span style="background-color: #fff0ea"></span>0</div>
     </div>
     <!-- Map -->
     <div id='map' class='map'></div>
